device/gamepad/game_controller_data_fetcher_mac.h
@@ -30,7 +30,11 @@ class GameControllerDataFetcherMac : public GamepadDataFetcher {
   void GetGamepadData(bool devices_changed_hint) override;
 
  private:
+  int NextUnusedPlayerIndex();
+
   DISALLOW_COPY_AND_ASSIGN(GameControllerDataFetcherMac);
+
+  bool connected_[Gamepads::kItemsLengthCap];
 };
 
 }  // namespace device
